test/fail/I.assert.js
I.do('I.assert() :', function(I){
    I.assert(false);
});
